Resync with LEAPv3.2