@@ -1,13 +1,26 @@
 package com.benzourry.leap.controller;
 
+//import co.elastic.thumbnails4j.core.Dimensions;
+//import co.elastic.thumbnails4j.core.Thumbnailer;
+//import co.elastic.thumbnails4j.doc.DOCThumbnailer;
+//import co.elastic.thumbnails4j.docx.DOCXThumbnailer;
+//import co.elastic.thumbnails4j.image.ImageThumbnailer;
+//import co.elastic.thumbnails4j.pdf.PDFThumbnailer;
+//import co.elastic.thumbnails4j.pptx.PPTXThumbnailer;
+//import co.elastic.thumbnails4j.xls.XLSThumbnailer;
+//import co.elastic.thumbnails4j.xlsx.XLSXThumbnailer;
+
+import com.benzourry.leap.exception.ResourceNotFoundException;
 import com.benzourry.leap.mixin.EntryMixin;
 import com.benzourry.leap.model.*;
+import com.benzourry.leap.repository.BucketRepository;
 import com.benzourry.leap.repository.EntryAttachmentRepository;
 import com.benzourry.leap.repository.ItemRepository;
 import com.benzourry.leap.security.CurrentUser;
 import com.benzourry.leap.security.UserPrincipal;
 import com.benzourry.leap.service.EntryService;
 import com.benzourry.leap.config.Constant;
+import com.benzourry.leap.utility.ClamAVServiceUtil;
 import com.benzourry.leap.utility.Helper;
 import com.benzourry.leap.utility.jsonresponse.JsonMixin;
 import com.benzourry.leap.utility.jsonresponse.JsonResponse;
@@ -31,6 +44,7 @@ import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBo
 
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+
 import java.io.*;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
@@ -42,7 +56,7 @@ import java.security.Principal;
 import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutionException;
+import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.zip.ZipEntry;
@@ -61,26 +75,22 @@ public class EntryController {
 
     final ItemRepository itemRepository;
 
+    final BucketRepository bucketRepository;
+
+    final ClamAVServiceUtil clamavService;
+
     @Autowired
-    public EntryController(EntryService entryService, EntryAttachmentRepository entryAttachmentRepository, ItemRepository itemRepository) {
+    public EntryController(EntryService entryService,
+                           EntryAttachmentRepository entryAttachmentRepository,
+                           ClamAVServiceUtil clamavService,
+                           ItemRepository itemRepository,
+                           BucketRepository bucketRepository) {
         this.entryService = entryService;
         this.entryAttachmentRepository = entryAttachmentRepository;
+        this.clamavService = clamavService;
         this.itemRepository = itemRepository;
+        this.bucketRepository = bucketRepository;
     }
-
-//    @GetMapping("{id}")
-//    public Entry findById(@PathVariable("id") long id){
-//        return entryService.findById(id);
-//    }
-
-    /*
-    * @JsonResponse(mixins = {
-            @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class),
-            @JsonMixin(target = Tier.class, mixin = EntryMixin.EntryListApprovalTier.class),
-            @JsonMixin(target = EntryApproval.class, mixin = EntryMixin.EntryListApproval.class),
-            @JsonMixin(target = Section.class, mixin = EntryMixin.EntryListApprovalTierSection.class),
-
-    })*/
 
     @GetMapping("{id}")
     @JsonResponse(mixins = {
@@ -89,18 +99,20 @@ public class EntryController {
             @JsonMixin(target = EntryApproval.class, mixin = EntryMixin.EntryListApproval.class),
             @JsonMixin(target = User.class, mixin = EntryMixin.EntryListApprovalApprover.class)
     })
-    public Entry findById(@PathVariable("id") long id, @RequestParam("formId") long formId, Principal principal) {
+    public Entry findById(@PathVariable("id") long id,
+                          @RequestParam("formId") long formId, HttpServletRequest request, Principal principal) {
         String name = principal == null ? null : principal.getName();
-        return entryService.findById(id, formId, name == null);
+        return entryService.findById(id, formId, name == null, request);
     }
 
-    @GetMapping("{id}/trails")
+    @GetMapping("{id}/approval-trails")
     @JsonResponse(mixins = {
             @JsonMixin(target = Entry.class, mixin = EntryMixin.NoForm.class),
             @JsonMixin(target = Tier.class, mixin = EntryMixin.EntryListApprovalTier.class)
     })
-    public Page<EntryApprovalTrail> findTrailById(@PathVariable("id") long id, @PageableDefault(size = Integer.MAX_VALUE) Pageable pageable) {
-        return entryService.findTrailById(id, pageable);
+    public Page<EntryApprovalTrail> findTrailById(@PathVariable("id") long id,
+                                                  @PageableDefault(size = Integer.MAX_VALUE) Pageable pageable) {
+        return entryService.findApprovalTrailById(id, pageable);
     }
 
     @GetMapping("{id}/files")
@@ -108,7 +120,8 @@ public class EntryController {
             @JsonMixin(target = Entry.class, mixin = EntryMixin.NoForm.class),
             @JsonMixin(target = Tier.class, mixin = EntryMixin.EntryListApprovalTier.class)
     })
-    public Page<EntryAttachment> findFilesById(@PathVariable("id") long id, @PageableDefault(size = Integer.MAX_VALUE) Pageable pageable) {
+    public Page<EntryAttachment> findFilesById(@PathVariable("id") long id,
+                                               @PageableDefault(size = Integer.MAX_VALUE) Pageable pageable) {
         return entryService.findFilesById(id, pageable);
     }
 
@@ -126,8 +139,9 @@ public class EntryController {
         Map p = new HashMap();
         try {
             p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
+        } catch (Exception e) {
+            System.out.println("Filters:" + filters);
+            System.out.println("Error decoding filter (formId:" + formId + "):" + e.getMessage());
         }
         String name = auth == null ? null : auth.getName();
         return entryService.findFirstByParam(formId, p, request, name == null);
@@ -144,12 +158,12 @@ public class EntryController {
             @JsonMixin(target = EntryApproval.class, mixin = EntryMixin.EntryListApproval.class),
             @JsonMixin(target = User.class, mixin = EntryMixin.EntryListApprovalApprover.class)
     })
-    public Entry save(@RequestParam long formId,
-                      @RequestParam(required = false) Long prevId,
+    public Entry save(@RequestParam("formId") long formId,
+                      @RequestParam(value = "prevId", required = false) Long prevId,
                       @RequestBody Entry entry,
-                      @RequestParam String email) {
+                      @RequestParam("email") String email) {
 //        System.out.println("principal:"+principal);
-        return entryService.save(formId, entry,prevId, email);
+        return entryService.save(formId, entry, prevId, email, true);
     }
 
     @PostMapping("field")
@@ -162,84 +176,28 @@ public class EntryController {
             @JsonMixin(target = EntryApproval.class, mixin = EntryMixin.EntryListApproval.class),
             @JsonMixin(target = User.class, mixin = EntryMixin.EntryListApprovalApprover.class)
     })
-    public Entry saveField(@RequestParam long entryId,
-                           @RequestBody JsonNode value, @RequestParam(required = false) String root, @RequestParam(required = false) Long appId) {
+    public Entry saveField(@RequestParam("entryId") long entryId,
+                           @RequestBody JsonNode value,
+                           @RequestParam(value = "root", required = false) String root,
+                           @RequestParam(value = "appId", required = false) Long appId) throws Exception {
         return entryService.updateField(entryId, value, root, appId);
     }
 
 
     @PostMapping("{id}/undelete")
-    public Map<String, Object> undelete(@PathVariable long id,
+    public Map<String, Object> undelete(@PathVariable("id") long id,
                                         @RequestParam("trailId") long trailId,
                                         Authentication authentication) {
         return entryService.undelete(id, trailId, authentication.getName());
     }
 
-
-    @GetMapping("update-entry")
-    @JsonResponse(mixins = {
-            @JsonMixin(target = Tier.class, mixin = EntryMixin.EntryListApprovalTier.class)
-    })
-    public void updateEntry(@RequestParam long formId) {
-//        System.out.println("principal:"+principal);
-        entryService.updateEntry(formId);
+    @PostMapping("{id}/undo")
+    public Map<String, Object> undo(@PathVariable("id") long id,
+                                    @RequestParam("trailId") long trailId,
+                                    Authentication authentication) {
+        return entryService.undo(id, trailId, authentication.getName());
     }
 
-//    @GetMapping
-//    @JsonResponse(mixins = {
-//            @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class)
-//    })
-//    public Page<Entry> findAll(@RequestParam("formId") Long formId,
-//                               @RequestParam(value = "searchText", required = false, defaultValue = "") String searchText,
-//                               @RequestParam(value = "status", defaultValue = "1") List<String> status,
-//                               @RequestParam("email") String email,
-//                               Pageable pageable){
-//        return entryService.findByEmail(formId, searchText,email, status, pageable);
-//    }
-
-//    @GetMapping("list/{type}")
-//    @JsonResponse(mixins = {
-//            @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class)
-//    })
-//    public Page<Entry> findAll(@RequestParam("formId") Long formId,
-//                               @PathVariable("type") String type,
-//                               @RequestParam(value = "searchText", required = false, defaultValue = "") String searchText,
-//                               @RequestParam(value = "status", defaultValue = "drafted") List<String> status,
-//                               @RequestParam("email") String email,
-//                               @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
-//                               Pageable pageable,
-//                               HttpServletRequest request){
-////        System.out.println(status);
-//        ObjectMapper mapper = new ObjectMapper();
-//        Map p = new HashMap();
-//        try {
-//            p = mapper.readValue(URLDecoder.decode(filters, "UTF-8"), Map.class);
-//        } catch (IOException e) {
-//            e.printStackTrace();
-//        }
-//        return entryService.findList(type, formId, searchText,email, status, p, pageable, request);
-//    }
-
-    //    @GetMapping("list-all")
-//    @JsonResponse(mixins = {
-//            @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class)
-//    })
-//    public List<JsonNode> findAll(@RequestParam("formId") Long formId,
-//                                  @RequestParam(value = "searchText", required = false, defaultValue = "") String searchText,
-//                                  @RequestParam(value = "status", defaultValue = "drafted") List<String> status,
-//                                  @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
-//                                  Pageable pageable,
-//                                  HttpServletRequest request){
-////        System.out.println(status);
-//        ObjectMapper mapper = new ObjectMapper();
-//        Map p = new HashMap();
-//        try {
-//            p = mapper.readValue(URLDecoder.decode(filters, "UTF-8"), Map.class);
-//        } catch (IOException e) {
-//            e.printStackTrace();
-//        }
-//        return entryService.findListData(formId, searchText, status, p, pageable, request);
-//    }
     @GetMapping("list-data")
     @JsonResponse(mixins = {
             @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class),
@@ -249,21 +207,22 @@ public class EntryController {
     public List<JsonNode> findUnboxed(@RequestParam("datasetId") Long datasetId,
                                       @RequestParam(value = "searchText", required = false) String searchText,
                                       @RequestParam(value = "email", required = false) String email,
+                                      @RequestParam(value = "sorts", required = false) List<String> sorts,
+                                      @RequestParam(value = "ids", required = false) List<Long> ids,
                                       @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
-//                                      @RequestParam(value = "status", required = false, defaultValue = "{}") String status,
+                                      @RequestParam(value = "@cond", required = false, defaultValue = "AND") String cond,
                                       Pageable pageable,
-                                      HttpServletRequest request) {
-//        System.out.println(status);
+                                      HttpServletRequest request, Principal principal) {
         ObjectMapper mapper = new ObjectMapper();
+        String name = principal == null ? null : principal.getName();
         Map p = new HashMap();
-//        Map s = new HashMap();
         try {
             p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
-//            s = mapper.readValue(URLDecoder.decode(status, "UTF-8"), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
+        } catch (Exception e) {
+            System.out.println("Filters:" + filters);
+            System.out.println("Error decoding filter (datasetId:" + datasetId + "):" + e.getMessage());
         }
-        return entryService.findListByDatasetData(datasetId, searchText, email, p, pageable, request);
+        return entryService.findListByDatasetData(datasetId, searchText, email, p, cond, sorts, ids, name == null, pageable, request);
     }
 
     @GetMapping("list")
@@ -272,7 +231,8 @@ public class EntryController {
             @JsonMixin(target = Tier.class, mixin = EntryMixin.EntryListApprovalTier.class),
             @JsonMixin(target = EntryApproval.class, mixin = EntryMixin.EntryListApproval.class),
             @JsonMixin(target = Section.class, mixin = EntryMixin.EntryListApprovalTierSection.class),
-            @JsonMixin(target = User.class, mixin = EntryMixin.EntryListApprovalApprover.class)
+            @JsonMixin(target = User.class, mixin = EntryMixin.EntryListApprovalApprover.class),
+//            @JsonMixin(target = JsonNode.class, mixin = EntryMixin.JsonNodeF.class)
 
     })
     public Page<Entry> findAllByDatasetIdCheck(@RequestParam("datasetId") Long datasetId,
@@ -281,19 +241,22 @@ public class EntryController {
                                                @RequestParam(value = "sorts", required = false) List<String> sorts,
                                                @RequestParam(value = "ids", required = false) List<Long> ids,
                                                @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
+                                               @RequestParam(value = "@cond", required = false, defaultValue = "AND") String cond,
                                                Pageable pageable,
                                                HttpServletRequest request, Principal principal) {
         ObjectMapper mapper = new ObjectMapper();
         String name = principal == null ? null : principal.getName();
+
+//        System.out.println(URLDecoder.decode(filters, StandardCharsets.UTF_8));
         Map p = new HashMap();
-//        Map s = new HashMap();
+
         try {
-            p = mapper.readValue(filters, Map.class);
-//            s = mapper.readValue(URLDecoder.decode(status, "UTF-8"), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
+            p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
+        } catch (Exception e) {
+            System.out.println("Filters:" + filters);
+            System.out.println("Error decoding filter (datasetId:" + datasetId + "):" + e.getMessage());
         }
-        return entryService.findListByDatasetCheck(datasetId, searchText, email, p, sorts, ids,name == null, pageable, request);
+        return entryService.findListByDatasetCheck(datasetId, searchText, email, p, cond, sorts, ids, name == null, pageable, request);
     }
 
     @Transactional
@@ -312,50 +275,49 @@ public class EntryController {
                                                        @RequestParam(value = "sorts", required = false) List<String> sorts,
                                                        @RequestParam(value = "ids", required = false) List<Long> ids,
                                                        @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
+                                                       @RequestParam(value = "@cond", required = false, defaultValue = "AND") String cond,
                                                        Pageable pageable,
                                                        HttpServletRequest request, Principal principal) {
         ObjectMapper mapper = new ObjectMapper();
         String name = principal == null ? null : principal.getName();
         Map p = new HashMap();
-//        Map s = new HashMap();
         try {
             p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
-//            s = mapper.readValue(URLDecoder.decode(status, "UTF-8"), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
+        } catch (Exception e) {
+            System.out.println("Filters:" + filters);
+            System.out.println("Error decoding filter (datasetId:" + datasetId + "):" + e.getMessage());
         }
-        return entryService.streamListByDatasetCheck(datasetId, searchText, email, p, sorts, ids,name == null, pageable, request);
+        return entryService.streamListByDatasetCheck(datasetId, searchText, email, p, cond, sorts, ids, name == null, pageable, request);
     }
 
-    @GetMapping("$list-private")
-    @JsonResponse(mixins = {
-            @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class),
-            @JsonMixin(target = Tier.class, mixin = EntryMixin.EntryListApprovalTier.class),
-            @JsonMixin(target = EntryApproval.class, mixin = EntryMixin.EntryListApproval.class),
-            @JsonMixin(target = Section.class, mixin = EntryMixin.EntryListApprovalTierSection.class),
-            @JsonMixin(target = User.class, mixin = EntryMixin.EntryListApprovalApprover.class)
-
-    })
-    public Page<Entry> findAllByDatasetId(@RequestParam("datasetId") Long datasetId,
-                                          @RequestParam(value = "searchText", required = false) String searchText,
-                                          @RequestParam(value = "email", required = false) String email,
-                                          @RequestParam(value = "sorts", required = false) List<String> sorts,
-                                          @RequestParam(value = "ids", required = false) List<Long> ids,
-                                          @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
-//                                          @RequestParam(value = "status", required = false, defaultValue = "{}") String status,
-                                          Pageable pageable,
-                                          HttpServletRequest request) {
-        ObjectMapper mapper = new ObjectMapper();
-        Map p = new HashMap();
-//        Map s = new HashMap();
-        try {
-            p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
-//            s = mapper.readValue(URLDecoder.decode(status, "UTF-8"), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return entryService.findListByDataset(datasetId, searchText, email, p, sorts,ids, pageable, request);
-    }
+//    @GetMapping("$list-private")
+//    @JsonResponse(mixins = {
+//            @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class),
+//            @JsonMixin(target = Tier.class, mixin = EntryMixin.EntryListApprovalTier.class),
+//            @JsonMixin(target = EntryApproval.class, mixin = EntryMixin.EntryListApproval.class),
+//            @JsonMixin(target = Section.class, mixin = EntryMixin.EntryListApprovalTierSection.class),
+//            @JsonMixin(target = User.class, mixin = EntryMixin.EntryListApprovalApprover.class)
+//
+//    })
+//    public Page<Entry> findAllByDatasetId(@RequestParam("datasetId") Long datasetId,
+//                                          @RequestParam(value = "searchText", required = false) String searchText,
+//                                          @RequestParam(value = "email", required = false) String email,
+//                                          @RequestParam(value = "sorts", required = false) List<String> sorts,
+//                                          @RequestParam(value = "ids", required = false) List<Long> ids,
+//                                          @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
+//                                          @RequestParam(value = "@cond", required = false, defaultValue = "AND") String cond,
+//                                          Pageable pageable,
+//                                          HttpServletRequest request) {
+//        ObjectMapper mapper = new ObjectMapper();
+//        Map p = new HashMap();
+//        try {
+//            p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
+//        } catch (Exception e) {
+//            System.out.println("Filters:"+filters);
+//            System.out.println("Error decoding filter (datasetId:"+datasetId+"):" + e.getMessage());
+//        }
+//        return entryService.findListByDataset(datasetId, searchText, email, p, cond, sorts,ids, pageable, request);
+//    }
 
     @GetMapping("count")
     @JsonResponse(mixins = {
@@ -366,9 +328,10 @@ public class EntryController {
 
     })
     public Map<String, Object> countByDatasetId(@RequestParam("datasetId") Long datasetId,
-                                                @RequestParam(value = "searchText", required = false, defaultValue = "") String searchText,
+                                                @RequestParam(value = "searchText", required = false) String searchText,
                                                 @RequestParam(value = "email", required = false) String email,
                                                 @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
+                                                @RequestParam(value = "@cond", required = false, defaultValue = "AND") String cond,
 //                                          @RequestParam(value = "status", required = false, defaultValue = "{}") String status,
                                                 Pageable pageable,
                                                 HttpServletRequest request) {
@@ -376,11 +339,12 @@ public class EntryController {
         Map p = new HashMap();
         try {
             p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
+        } catch (Exception e) {
+            System.out.println("Filters:" + filters);
+            System.out.println("Error decoding filter (datasetId:" + datasetId + "):" + e.getMessage());
         }
         Map<String, Object> data = new HashMap<>();
-        data.put("count", entryService.countByDataset(datasetId, searchText, email, p, request));
+        data.put("count", entryService.countByDataset(datasetId, searchText, email, p, cond, request));
         return data;
     }
 
@@ -394,132 +358,24 @@ public class EntryController {
                                                      @RequestParam("email") String email,
                                                      @RequestParam(value = "ids", required = false) List<Long> ids,
                                                      @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
-//                                                     @RequestParam(value = "status", required = false, defaultValue = "{}") String status,
+                                                     @RequestParam(value = "@cond", required = false, defaultValue = "AND") String cond,
                                                      @RequestBody EmailTemplate emailTemplate,
+                                                     @CurrentUser UserPrincipal principal,
                                                      HttpServletRequest request) {
         ObjectMapper mapper = new ObjectMapper();
         Map p = new HashMap();
-//        Map s = new HashMap();
         try {
             p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
-//            s = mapper.readValue(URLDecoder.decode(filters, "UTF-8"), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
+        } catch (Exception e) {
+            System.out.println("Filters:" + filters);
+            System.out.println("Error decoding filter (datasetId:" + datasetId + "):" + e.getMessage());
         }
-        return entryService.blastEmailByDataset(datasetId, searchText, email, p, emailTemplate, ids,request);
+        return entryService.blastEmailByDataset(datasetId, searchText, email, p, cond, emailTemplate, ids, request, principal.getEmail());
     }
-
-
-    @GetMapping("list/{type}/ngx-chart")
-    @JsonResponse(mixins = {
-            @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class)
-    })
-    public Page<Entry> findAllNgxChart(@RequestParam("formId") Long formId,
-                                       @PathVariable("type") String type,
-                                       @RequestParam(value = "searchText", required = false, defaultValue = "") String searchText,
-                                       @RequestParam(value = "status", defaultValue = "drafted") List<String> status,
-                                       @RequestParam("email") String email,
-                                       @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
-                                       Pageable pageable,
-                                       HttpServletRequest request) {
-//        System.out.println(status);
-        ObjectMapper mapper = new ObjectMapper();
-        Map p = new HashMap();
-        try {
-            p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return entryService.findListNormalizedNgxChart(type, formId, searchText, email, status, p, pageable, request);
-    }
-
-    @GetMapping("list/{type}/ngx-chart-series")
-    @JsonResponse(mixins = {
-            @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class)
-    })
-    public Page<Entry> findAllNgxChartSeries(@RequestParam("formId") Long formId,
-                                             @PathVariable("type") String type,
-                                             @RequestParam(value = "searchText", required = false, defaultValue = "") String searchText,
-                                             @RequestParam(value = "status", defaultValue = "drafted") List<String> status,
-                                             @RequestParam("email") String email,
-                                             @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
-                                             Pageable pageable,
-                                             HttpServletRequest request) {
-//        System.out.println(status);
-        ObjectMapper mapper = new ObjectMapper();
-        Map p = new HashMap();
-        try {
-            p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return entryService.findListNormalizedNgxChartSeries(type, formId, searchText, email, status, p, "month", pageable, request);
-    }
-
-//    @GetMapping("list/{type}/ngx-chart-series-flip")
-//    @JsonResponse(mixins = {
-//            @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class)
-//    })
-//    public Page<Entry> findAllNgxChartSeriesFlip(@RequestParam("formId") Long formId,
-//                               @PathVariable("type") String type,
-//                               @RequestParam(value = "searchText", required = false, defaultValue = "") String searchText,
-//                               @RequestParam(value = "status", defaultValue = "drafted") List<String> status,
-//                               @RequestParam("email") String email,
-//                               @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
-//                               Pageable pageable,
-//                               HttpServletRequest request){
-////        System.out.println(status);
-//        ObjectMapper mapper = new ObjectMapper();
-//        Map p = new HashMap();
-//        try {
-//            p = mapper.readValue(URLDecoder.decode(filters, "UTF-8"), Map.class);
-//        } catch (IOException e) {
-//            e.printStackTrace();
-//        }
-//        return entryService.findListNormalizedNgxChartSeriesFlip(type, formId, searchText,email, status, p, "month", pageable, request);
-//    }
-
-    @GetMapping("list/{type}/ngx-echart-series")
-    @JsonResponse(mixins = {
-            @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class)
-    })
-    public Map findAllNgxEchartSeries(@RequestParam("datasetId") Long datasetId,
-                                      @PathVariable("type") String type,
-                                      @RequestParam(value = "searchText", required = false, defaultValue = "") String searchText,
-//                               @RequestParam(value = "status", defaultValue = "drafted") List<String> status,
-                                      @RequestParam(value = "email", required = false) String email,
-//                               @RequestParam("chartType") String chartType,
-                                      @RequestParam("seriesCol") String seriesCol,
-                                      @RequestParam(value = "exclude", required = false) List<String> exclude,
-                                      @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
-                                      Pageable pageable,
-                                      HttpServletRequest request) {
-//        System.out.println(status);
-        ObjectMapper mapper = new ObjectMapper();
-        Map p = new HashMap();
-        try {
-            p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return entryService.findListNormalizedNgxEchartSeries(type, datasetId, searchText, email, p, seriesCol, exclude, pageable, request);
-    }
-
-
-//    @GetMapping("admin")
-//    @JsonResponse(mixins = {
-//            @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class)
-//    })
-//    public Page<Entry> findAdmin(@RequestParam("formId") Long formId,
-//                                 @RequestParam(value = "searchText", required = false, defaultValue = "") String searchText,
-//                               @RequestParam(value = "status", defaultValue = "1") List<String> status,
-//                               @RequestParam("email") String email,
-//                               Pageable pageable){
-//        return entryService.findAdminByEmail(formId, searchText,email, status, pageable);
-//    }
 
     @PostMapping("{id}/delete")
-    public Map<String, Object> deleteEntry(@PathVariable("id") Long id, Authentication authentication) {
+    public Map<String, Object> deleteEntry(@PathVariable("id") Long id,
+                                           Authentication authentication) {
         Map<String, Object> data = new HashMap<>();
         String name = authentication.getName();
         entryService.deleteEntry(id, name);
@@ -527,7 +383,8 @@ public class EntryController {
     }
 
     @PostMapping("bulk/delete")
-    public Map<String, Object> deleteEntries(@RequestParam("ids") List<Long> ids, Authentication authentication) {
+    public Map<String, Object> deleteEntries(@RequestParam("ids") List<Long> ids,
+                                             Authentication authentication) {
         Map<String, Object> data = new HashMap<>();
         String name = authentication.getName();
         entryService.deleteEntries(ids, name);
@@ -535,21 +392,28 @@ public class EntryController {
     }
 
     @PostMapping("{id}/submit")
-    public Entry submit(@PathVariable Long id) {
-        return entryService.submit(id);
+    public Entry submit(@PathVariable("id") Long id,
+                        @CurrentUser UserPrincipal principal) {
+        return entryService.submit(id, principal.getEmail());
+    }
+
+    @PostMapping("{id}/resubmit")
+    public Entry resubmit(@PathVariable("id") Long id,
+                          @CurrentUser UserPrincipal principal) {
+        return entryService.resubmit(id, principal.getEmail());
     }
 
     @PostMapping("{id}/reset")
-    public Entry reset(@PathVariable Long id) {
+    public Entry reset(@PathVariable("id") Long id) {
         return entryService.reset(id);
     }
 
-    @PostMapping("{id}/update-approval")
-    public Entry updateApproval(@PathVariable Long id,
-                                @RequestParam("tierId") Long tierId,
-                                @RequestBody EntryApproval entryApproval) {
-        return entryService.updateApproval(tierId, id, entryApproval);
-    }
+//    @PostMapping("{id}/update-approval")
+//    public Entry updateApproval(@PathVariable Long id,
+//                                @RequestParam("tierId") Long tierId,
+//                                @RequestBody EntryApproval entryApproval) {
+//        return entryService.updateApproval(tierId, id, entryApproval);
+//    }
 
     @PostMapping("update-approver")
     public CompletableFuture<Map<String, Object>> updateApproval(@RequestParam("formId") Long formId,
@@ -564,99 +428,49 @@ public class EntryController {
     }
 
     @PostMapping("{id}/remove-approval")
-    public Entry removeApproval(@PathVariable Long id,
+    public Entry removeApproval(@PathVariable("id") Long id,
                                 @RequestParam("tierId") Long tierId) {
         return entryService.removeApproval(tierId, id);
     }
 
-    @PostMapping("{id}/resubmit")
-    public Entry resubmit(@PathVariable Long id) {
-        return entryService.resubmit(id);
-    }
-
     @PostMapping("{id}/retract")
-    public Entry retract(@PathVariable Long id, @RequestParam("email") String email) {
+    public Entry retract(@PathVariable("id") Long id,
+                         @RequestParam("email") String email) {
         return entryService.retractApp(id, email);
     }
 
     @PostMapping("{id}/assign")
-    public Entry assign(@PathVariable Long id, @RequestParam("tierId") Long tierId, @RequestParam("email") String email) throws Exception {
+    public Entry assign(@PathVariable("id") Long id,
+                        @RequestParam("tierId") Long tierId,
+                        @RequestParam("email") String email) throws Exception {
         return entryService.assignApprover(id, tierId, email);
     }
 
-//    @PostMapping("{id}/action")
-//    public Entry actionApp(@PathVariable Long id,
-//                           @RequestBody EntryApproval gas,
-//                           @RequestParam("email") String email) throws Exception {
-////        Map<String, Object> data = new HashMap<>();
-//        Entry grant = entryService.actionApp(id, gas, email);
-//
-////        data.put("message", "success");
-////        data.put("grantApplication", grant);
-//
-//        return grant;
-//    }
-
     @PostMapping("{id}/action")
-    public Entry actionApp(@PathVariable Long id,
+    public Entry actionApp(@PathVariable("id") Long id,
                            @RequestBody EntryApproval gas,
-                           @RequestParam("email") String email) {
+                           @RequestParam("email") String email,
+                           @RequestParam(value = "silent", required = false) boolean silent) {
 //        Map<String, Object> data = new HashMap<>();
 
-        return entryService.actionApp(id, gas, email);
+        return entryService.actionApp(id, gas, silent, email);
     }
 
     @PostMapping("bulk/action")
-    public Map<String, Object> actionApp(@RequestParam List<Long> ids,
-                           @RequestBody EntryApproval gas,
-                           @RequestParam("email") String email) {
+    public Map<String, Object> actionApp(@RequestParam("ids") List<Long> ids,
+                                         @RequestBody EntryApproval gas,
+                                         @RequestParam("email") String email) {
 //        Map<String, Object> data = new HashMap<>();
 
         return entryService.actionApps(ids, gas, email);
     }
 
     @PostMapping("{id}/save-approval")
-    public Entry saveApproval(@PathVariable Long id,
+    public Entry saveApproval(@PathVariable("id") Long id,
                               @RequestBody EntryApproval gas,
                               @RequestParam("email") String email) {
-//        Map<String, Object> data = new HashMap<>();
         return entryService.saveApproval(id, gas, email);
-
-//        data.put("message", "success");
-//        data.put("grantApplication", grant);
-
-//        return grant;
     }
-
-
-//    @GetMapping("action-list")
-//    @JsonResponse(mixins = {
-//            @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class)
-//    })
-//    public Page<Entry> actionList(@RequestParam(value = "searchText", required = false, defaultValue = "") String searchText,
-//                                  @RequestParam("formId") Long formId,
-//                                     @RequestParam("email") String email,
-////                                     @RequestParam("group") List<String> group,
-//                                     @RequestParam(value = "status", required = false, defaultValue = "resubmitted,submitted") List<String> status,
-//                                     Pageable pageable) throws Exception {
-//
-//        return entryService.findActionByEmail(formId, searchText,email, status,pageable);
-//    }
-
-
-//    @GetMapping("action-archive-list")
-//    @JsonResponse(mixins = {
-//            @JsonMixin(target = Entry.class, mixin = EntryMixin.EntryList.class)
-//    })
-//    public Page<Entry> actionArchiveList(@RequestParam(value = "searchText", required = false, defaultValue = "") String searchText,
-//                                  @RequestParam("formId") Long formId,
-//                                     @RequestParam("email") String email,
-//                                     @RequestParam(value = "status", required = false, defaultValue = "resubmitted,submitted") List<String> status,
-//                                     Pageable pageable) throws Exception {
-//
-//        return entryService.getActionArchiveList(formId, searchText,email, status,pageable);
-//    }
-
 
     @GetMapping("{appId}/start")
     public Map<String, Long> getStart(@PathVariable("appId") Long appId, @RequestParam("email") String email) {
@@ -674,14 +488,15 @@ public class EntryController {
     }
 
 
-    @GetMapping("ef-exec2")
-    public Object efExec2(@RequestParam("formId") Long formId,
-                                                         @RequestParam("field") String field,
-                                                         @RequestParam(value = "force", defaultValue = "false") boolean force) {
+//    @GetMapping("ef-exec2")
+//    public Object efExec2(@RequestParam("formId") Long formId,
+//                                                         @RequestParam("field") String field,
+//                                                         @RequestParam(value = "force", defaultValue = "false") boolean force) {
+//
+//        return this.entryService.getStart(122L,"blmrazif@unimas.my");
+//    }
 
-        return this.entryService.getStart(122L,"blmrazif@unimas.my");
-    }
-
+    @Transactional
     @PostMapping(value = "upload-file")
     public EntryAttachment uploadFile(@RequestParam("file") MultipartFile file,
                                       @RequestParam(value = "itemId", required = false) Long itemId,
@@ -696,12 +511,14 @@ public class EntryController {
 
         String username = principal.getName();
         Long userId = principal.getId();
+
+        System.out.println("username:" + username + ",userId:" + userId);
 //        Map<String, String> details = (Map<String, String>) auth.getUserAuthentication().getDetails();
 //        String username = details.get("email");
 
         long fileSize = file.getSize();
         String contentType = file.getContentType();
-        String originalFilename = URLEncoder.encode(file.getOriginalFilename().replaceAll("[^a-zA-Z0-9.]",""), StandardCharsets.UTF_8);
+        String originalFilename = URLEncoder.encode(file.getOriginalFilename().replaceAll("[^a-zA-Z0-9_\\.\\-]", "_"), StandardCharsets.UTF_8);
 
 
 //        String random = Long.toString(UUID.randomUUID().getLessSignificantBits(), Character.MAX_RADIX);
@@ -711,16 +528,6 @@ public class EntryController {
         String destStr = Constant.UPLOAD_ROOT_DIR + "/attachment/";
 
         EntryAttachment attachment = new EntryAttachment();
-        attachment.setFileName(originalFilename);
-        attachment.setFileSize(fileSize);
-        attachment.setFileType(contentType);
-        attachment.setFileUrl(filePath);
-        attachment.setEmail(principal.getEmail());
-        attachment.setTimestamp(new Date());
-        attachment.setMessage("success");
-        attachment.setItemId(itemId);
-        attachment.setAppId(appId);
-//        attachment.setBucketId(bucketId);
 
         Item item = null;
         if (itemId != null || bucketId != null) {
@@ -728,7 +535,7 @@ public class EntryController {
                 attachment.setBucketId(bucketId);
                 destStr += "bucket-" + bucketId + "/";
             } else {
-                item = itemRepository.getReferenceById(itemId);
+                item = itemRepository.findById(itemId).orElse(null);
                 if (item != null) {
                     try {
                         Long bucketIdItem = item.getX().get("bucket").asLong();
@@ -742,57 +549,258 @@ public class EntryController {
                 }
             }
             if (itemId != null) {
-                item = itemRepository.getReferenceById(itemId);
-                attachment.setItemLabel(item.getLabel());
+                item = itemRepository.findById(itemId).orElse(null);
+                if (item != null) {
+                    attachment.setItemLabel(item.getLabel());
+                    if (item.getX().at("/filenameTpl")!=null) {
+                        String filenameTpl = item.getX().at("/filenameTpl").asText("");
+//                    System.out.println(">>item wujud: "+ item.getX().get("filenameTpl").isEmpty()+","+ item.getX().get("filenameTpl").asText());
+                        if (!filenameTpl.isBlank()) {
+                            if (filenameTpl.contains("$unique$")) {
+                                filePath = originalFilename;
+                            } else {
+                                filePath = Instant.now().getEpochSecond() + "-" + originalFilename;
+                            }
+//                        System.out.println("filePath:"+filePath);
+                        }
+                    }
+                }
             }
-
         }
+
+        attachment.setFileName(originalFilename);
+        attachment.setFileSize(fileSize);
+        attachment.setFileType(contentType);
+        attachment.setFileUrl(filePath);
+        attachment.setEmail(principal.getEmail());
+        attachment.setTimestamp(new Date());
+        attachment.setMessage("success");
+        attachment.setItemId(itemId);
+        attachment.setAppId(appId);
         attachment.setSuccess(true);
 
         File dir = new File(destStr);
+
         dir.mkdirs();
 
-
-        if (item != null && item.getX() != null && item.getX().get("zip") != null && item.getX().get("zip").asBoolean()) {
-            InputStream inputStream = file.getInputStream();
-            FileOutputStream fos = new FileOutputStream(destStr + filePath + ".zip");
-            ZipOutputStream zipOutputStream = new ZipOutputStream(fos);
-            ZipEntry zipEntry = new ZipEntry(file.getOriginalFilename());
-            zipOutputStream.putNextEntry(zipEntry);
-
-            byte[] bytes = new byte[1024];
-            int length;
-            while ((length = inputStream.read(bytes)) >= 0) {
-                zipOutputStream.write(bytes, 0, length);
+        Boolean isFileSafe = true;
+        if (bucketId != null) {
+            Bucket bucket = bucketRepository.findById(bucketId).orElseThrow(() -> new ResourceNotFoundException("Bucket", "id", bucketId));
+            if (bucket.getX() != null && bucket.getX().at("/scanUpload").asBoolean(false)) {
+                try {
+                    long startScan = System.currentTimeMillis();
+                    isFileSafe = clamavService.scanFileAttachment(filePath, file);
+                    long endScan = System.currentTimeMillis();
+                } catch (Exception ex) {
+                    isFileSafe = true; // if error scanning, just return true;
+                }
             }
-            zipOutputStream.close();
-
-            attachment.setFileType("application/zip");
-            attachment.setFileUrl(filePath + ".zip");
-
         } else {
-            System.out.println("no zip");
-            File dest = new File(destStr + filePath);
-
+            // if not in bucket, FORCE file scanning
             try {
-                file.transferTo(dest);
-            } catch (IllegalStateException e) {
-                attachment.setMessage("failed");
-                attachment.setSuccess(false);
+                long startScan = System.currentTimeMillis();
+                isFileSafe = clamavService.scanFileAttachment(filePath, file);
+                long endScan = System.currentTimeMillis();
+            } catch (Exception ex) {
+                isFileSafe = true; // if error scanning, just return true;
             }
+
         }
 
-//        File dest = new File(destStr + filePath);
+//        System.out.println("File safe:"+isFilesafe);
+//        System.out.println("Duration:" + 125);// (endScan-startScan));
+//        isFileSafe = false;
+
+
+        if (isFileSafe) {
+            if (item != null && item.getX() != null && item.getX().get("zip") != null && item.getX().get("zip").asBoolean()) {
+                InputStream inputStream = file.getInputStream();
+                FileOutputStream fos = new FileOutputStream(destStr + filePath + ".zip");
+                ZipOutputStream zipOutputStream = new ZipOutputStream(fos);
+                ZipEntry zipEntry = new ZipEntry(file.getOriginalFilename());
+                zipOutputStream.putNextEntry(zipEntry);
+
+                byte[] bytes = new byte[1024];
+                int length;
+                while ((length = inputStream.read(bytes)) >= 0) {
+                    zipOutputStream.write(bytes, 0, length);
+                }
+                zipOutputStream.close();
+
+                attachment.setFileType("application/zip");
+                attachment.setFileUrl(filePath + ".zip");
+
+            } else {
+//            System.out.println("no zip");
+                File dest = new File(destStr + filePath);
+
+                try {
+                    file.transferTo(dest);
+                } catch (IllegalStateException e) {
+                    attachment.setMessage("failed");
+                    attachment.setSuccess(false);
+                }
+
+                attachment.setSStatus("OK");
+                attachment.setSMessage("✅ ClamAV: File safe!: The file " + originalFilename + " is safe.");
+
+
+                // create thumbnail
+//            Thumbnailer thumbnailer = null;
+//            File dirThumb = new File (destStr+"thumbs/");
+//            dirThumb.mkdirs();
 //
+//            System.out.println(file.getOriginalFilename());
+//            if (file.getOriginalFilename().endsWith(".doc")){
+//                thumbnailer = new DOCThumbnailer();
+//            }else if (file.getOriginalFilename().endsWith(".docx")){
+//                System.out.println("!!!!dlm docx");
+//                thumbnailer = new DOCXThumbnailer();
+//            }else if (file.getOriginalFilename().contains(".pdf")){
+//                thumbnailer = new PDFThumbnailer();
+//            }else if (file.getOriginalFilename().contains(".pptx")){
+//                thumbnailer = new PPTXThumbnailer();
+//            }else if (file.getOriginalFilename().contains(".xls")){
+//                thumbnailer = new XLSThumbnailer();
+//            }else if (file.getOriginalFilename().contains(".xlsx")){
+//                thumbnailer = new XLSXThumbnailer();
+//            }else if (file.getContentType().contains("image/")){
+//                thumbnailer = new ImageThumbnailer("png");
+//            }
+//            if (thumbnailer!=null){
+//                List<Dimensions> outputDimensions = Collections.singletonList(new Dimensions(240, 240));
+//                BufferedImage thumbImage = thumbnailer.getThumbnails(dest, outputDimensions).get(0);
+//                ImageIO.write(thumbImage, "jpg", new File(destStr+"thumbs/"+filePath+".jpg"));
+//            }
+                // end thumbnail
+
+            }
+        } else {
+            attachment.setMessage("ClamAV: Failed virus scanning: The file " + originalFilename + " might have been compromised.");
+            attachment.setSuccess(false);
+            attachment.setSStatus("FOUND");
+            attachment.setSMessage("❌ ClamAV: Threat Found!: The file " + originalFilename + " might have been compromised.");
+
+        }
+
+        return entryAttachmentRepository.save(attachment);
+    }
+
+
+//    @PostMapping(value = "upload-file-new")
+//    public EntryAttachment uploadFileNew(@RequestParam("file") MultipartFile file,
+//                                      @RequestParam(value = "itemId", required = false) Long itemId,
+//                                      @RequestParam(value = "bucketId", required = false) Long bucketId,
+//                                      @RequestParam(value = "appId", required = false) Long appId,
+//                                      @CurrentUser UserPrincipal principal,
+//                                      HttpServletRequest request) throws Exception {
+//
+//        // Date dateNow = new Date();
+//        Map<String, Object> data = new HashMap<>();
+//
+//        String username = principal.getName();
+//        Long userId = principal.getId();
+//
+//        long fileSize = file.getSize();
+//        String contentType = file.getContentType();
+//        String originalFilename = URLEncoder.encode(file.getOriginalFilename().replaceAll("[^a-zA-Z0-9.]",""), StandardCharsets.UTF_8);
+//
+//
+//        String filePath = userId + "_" + Instant.now().getEpochSecond() + "_" + originalFilename;
+//
+//        String destStr = Constant.UPLOAD_ROOT_DIR + "/attachment/";
+//
+//        EntryAttachment attachment = new EntryAttachment();
+//        attachment.setFileName(originalFilename);
+//        attachment.setFileSize(fileSize);
+//        attachment.setFileType(contentType);
+//        attachment.setFileUrl(filePath);
+//        attachment.setEmail(principal.getEmail());
+//        attachment.setTimestamp(new Date());
+//        attachment.setMessage("success");
+//        attachment.setItemId(itemId);
+//        attachment.setAppId(appId);
+//
+//        Item item = null;
+//        if (itemId != null || bucketId != null) {
+//            if (bucketId != null) {
+//                attachment.setBucketId(bucketId);
+//                destStr += "bucket-" + bucketId + "/";
+//            } else {
+//                item = itemRepository.findById(itemId).orElse(null);
+//                if (item != null) {
+//                    try {
+//                        Long bucketIdItem = item.getX().get("bucket").asLong();
+//                        if (bucketIdItem != null) {
+//                            destStr += "bucket-" + bucketIdItem + "/";
+//                            attachment.setBucketId(bucketIdItem);
+//                        }
+//                    } catch (Exception e) {
+////                        System.out.println("Error retrieving bucket id.");
+//                    }
+//                }
+//            }
+//            if (itemId != null) {
+//                item = itemRepository.findById(itemId).orElse(null);
+//                if (item!=null){
+//                    attachment.setItemLabel(item.getLabel());
+//                }
+//            }
+//        }
+//        attachment.setSuccess(true);
+//
+//        File dir = new File(destStr);
+//        File dirThumb = new File (destStr+"thumbs/");
+//        dir.mkdirs();
+//        dirThumb.mkdirs();
+//
+//        File dest = new File(destStr + filePath);
 //        try {
 //            file.transferTo(dest);
 //        } catch (IllegalStateException e) {
 //            attachment.setMessage("failed");
 //            attachment.setSuccess(false);
 //        }
-
-        return entryAttachmentRepository.save(attachment);
-    }
+//
+//        // create thumbnail
+//        Thumbnailer thumbnailer = new PDFThumbnailer();
+//        List<Dimensions> outputDimensions = Collections.singletonList(new Dimensions(240, 240));
+//        BufferedImage thumbImage = thumbnailer.getThumbnails(dest, outputDimensions).get(0);
+//        ImageIO.write(thumbImage, "jpg", new File(destStr+"thumbs/"+filePath+".jpg"));
+//        // end thumbnail
+//
+////        InputStream inputStream = file.getInputStream();
+//        if (item != null && item.getX() != null && item.getX().get("zip") != null && item.getX().get("zip").asBoolean()) {
+//
+//
+//            FileOutputStream fos = new FileOutputStream(destStr + filePath + ".zip");
+//            ZipOutputStream zipOut = new ZipOutputStream(fos);
+//
+//            FileInputStream fis = new FileInputStream(dest);
+//            ZipEntry zipEntry = new ZipEntry(file.getOriginalFilename());
+//            zipOut.putNextEntry(zipEntry);
+//
+//            byte[] bytes = new byte[1024];
+//            int length;
+//            while((length = fis.read(bytes)) >= 0) {
+//                zipOut.write(bytes, 0, length);
+//            }
+//
+//            zipOut.close();
+//            fis.close();
+//            fos.close();
+//
+//            dest.deleteOnExit();
+//
+////            dest.delete();
+//
+//            attachment.setFileType("application/zip");
+//            attachment.setFileUrl(filePath + ".zip");
+//
+//        }
+//
+//        return entryAttachmentRepository.save(attachment);
+//    }
 
 
     @PostMapping(value = "{id}/link-files")
@@ -806,39 +814,18 @@ public class EntryController {
 
         List<EntryAttachment> eaList = files.stream().map(f -> {
 //            System.out.println(f);
-            EntryAttachment ea = entryAttachmentRepository.findByFileUrl(f);
+            EntryAttachment ea = entryAttachmentRepository.findFirstByFileUrl(f);
             ea.setEntryId(id);
             return ea;
         }).collect(Collectors.toList());
 
         entryAttachmentRepository.saveAll(eaList);
 
-//        if (!Helper.isNullOrEmpty(fileUrl)) {
-//            EntryAttachment entryAttachment = entryAttachmentRepository.findByFileUrl(fileUrl);
-//
-//            String destStr = Constant.UPLOAD_ROOT_DIR + "/attachment/";
-//
-//            if (entryAttachment.getBucketId()!=null){
-//                destStr += "bucket-" + entryAttachment.getBucketId() + "/";
-//            }
-//
-//
-//            File dir = new File(destStr);
-//            dir.mkdirs();
-//
-//            File dest = new File( destStr + fileUrl);
-//            data.put("success", dest.delete());
-//
-//
-//            entryAttachmentRepository.delete(entryAttachment);
-//        }else{
-//            data.put("success", false);
-//            data.put("message", "Empty fileUrl");
-//        }
         return data;
     }
 
     @PostMapping(value = "delete-file")
+    @Transactional
     public Map<String, Object> deleteFile(@RequestParam("fileUrl") List<String> fileUrl,
                                           Principal principal,
                                           HttpServletRequest request) {
@@ -849,22 +836,28 @@ public class EntryController {
         fileUrl.forEach(file -> {
             Map<String, Object> mdata = new HashMap<>();
             if (!Helper.isNullOrEmpty(file)) {
-                EntryAttachment entryAttachment = entryAttachmentRepository.findByFileUrl(file);
+                EntryAttachment entryAttachment = entryAttachmentRepository.findFirstByFileUrl(file);
 
-                String destStr = Constant.UPLOAD_ROOT_DIR + "/attachment/";
+                if (entryAttachment != null) {
+                    String destStr = Constant.UPLOAD_ROOT_DIR + "/attachment/";
 
-                if (entryAttachment != null && entryAttachment.getBucketId() != null) {
-                    destStr += "bucket-" + entryAttachment.getBucketId() + "/";
+                    if (entryAttachment != null && entryAttachment.getBucketId() != null) {
+                        destStr += "bucket-" + entryAttachment.getBucketId() + "/";
+                    }
+
+                    File dir = new File(destStr);
+                    dir.mkdirs();
+
+                    File dest = new File(destStr + file);
+                    mdata.put("success", dest.delete());
+
+                    entryAttachmentRepository.delete(entryAttachment);
+                } else {
+                    mdata.put("success", false);
+                    mdata.put("message", "EntryAttachment doesn't exist");
                 }
 
-                File dir = new File(destStr);
-                dir.mkdirs();
 
-                File dest = new File(destStr + file);
-                mdata.put("success", dest.delete());
-
-
-                entryAttachmentRepository.delete(entryAttachment);
             } else {
                 mdata.put("success", false);
                 mdata.put("message", "Empty fileUrl");
@@ -876,145 +869,80 @@ public class EntryController {
         return data;
     }
 
-//    @RequestMapping(value="file/{path}")
-//    public FileSystemResource getFlowChartFile(@PathVariable("path") String path, HttpServletResponse response){
-////        GrantApp g = grantAppService.getGrantApp(id);
-//ContentDisposition contentDisposition = ContentDisposition.builder("attachment")
-//          .filename(path)
-//                .build();
-//        response.setHeader(HttpHeaders.CONTENT_DISPOSITION, contentDisposition.toString());
-//        response.setContentType(MediaType.APPLICATION_OCTET_STREAM_VALUE);
-//
-//      //  response.setHeader("Content-Disposition", "attachment; filename=\""+path+"\"");
-//        return new FileSystemResource(Constant.UPLOAD_ROOT_DIR +"/attachment/" +path);
-//    }
-
     @RequestMapping(value = "file/{path}")
-    public ResponseEntity<StreamingResponseBody> getFileEntity(@PathVariable("path") String path, HttpServletResponse response, Principal principal) throws IOException {
-//        GrantApp g = grantAppService.getGrantApp(id);
+    @Transactional(readOnly = true)
+    public ResponseEntity<StreamingResponseBody> getFileEntity(@PathVariable("path") String path,
+                                                               HttpServletResponse response, Principal principal) throws IOException {
 
         String destStr = Constant.UPLOAD_ROOT_DIR + "/attachment/";
 
-        if (!Helper.isNullOrEmpty(path)) {
-            EntryAttachment entryAttachment = entryAttachmentRepository.findByFileUrl(path);
-            if (entryAttachment != null && entryAttachment.getBucketId() != null) {
-                destStr += "bucket-" + entryAttachment.getBucketId() + "/";
-            }
-
-            if (entryAttachment != null && entryAttachment.getItemId() != null) {
-                Item item = itemRepository.getReferenceById(entryAttachment.getItemId());
-                if (item != null && item.getX() != null && item.getX().get("secure") != null && item.getX().get("secure").asBoolean() && principal==null) {
-                    // is private
-                        // ERROR 401
-                        throw new OAuth2AuthenticationException(new OAuth2Error("401"),"Full authentication is required to access this resource");
-                }
-            }
-
-            ContentDisposition contentDisposition = ContentDisposition.builder("attachment")
-                    .filename(path)
-                    .build();
-
-            File file = new File(destStr + path);
-
-            if (file.isFile()) {
-
-                String mimeType = Files.probeContentType(file.toPath());
-
-                ResponseEntity.BodyBuilder builder = ResponseEntity.ok()
-                        .header(HttpHeaders.CONTENT_DISPOSITION, contentDisposition.toString());
-
-                if (!Helper.isNullOrEmpty(mimeType)) {
-                    builder.contentType(MediaType.parseMediaType(mimeType));
-                } else {
-                    if (entryAttachment != null && Helper.isNullOrEmpty(entryAttachment.getFileType())) {
-                        builder.contentType(MediaType.parseMediaType(entryAttachment.getFileType()));
-                    }
-                }
-//                return builder.body(Files.readAllBytes(file.toPath()));
-                return builder.body(outputStream -> Files.copy(file.toPath(), outputStream));
-            } else {
-                return new ResponseEntity(HttpStatus.NOT_FOUND);
-            }
-
-
-        } else {
-            return new ResponseEntity(HttpStatus.NOT_FOUND);
+        if (path.startsWith("lookup")) {
+            path = path.replaceAll("~", "/");
         }
 
+        if (Helper.isNullOrEmpty(path)) return new ResponseEntity(HttpStatus.NOT_FOUND);
+
+        EntryAttachment entryAttachment = entryAttachmentRepository.findFirstByFileUrl(path);
+        if (entryAttachment != null && entryAttachment.getBucketId() != null) {
+            destStr += "bucket-" + entryAttachment.getBucketId() + "/";
+        }
+
+        if (entryAttachment != null && entryAttachment.getItemId() != null) {
+            Item item = itemRepository.findById(entryAttachment.getItemId()).orElse(null);
+            if (item != null && item.getX() != null && item.getX().get("secure") != null && item.getX().get("secure").asBoolean() && principal == null) {
+                // is private
+                // ERROR 401
+                throw new OAuth2AuthenticationException(new OAuth2Error("401"), "Full authentication is required to access this resource");
+            }
+        }
+
+        ContentDisposition contentDisposition = ContentDisposition.builder("attachment")
+                .filename(path)
+                .build();
+
+        File file = new File(destStr + path);
+
+        if (!file.isFile()) return new ResponseEntity(HttpStatus.NOT_FOUND);
+
+        String mimeType = Files.probeContentType(file.toPath());
+
+        ResponseEntity.BodyBuilder builder = ResponseEntity.ok()
+                .cacheControl(CacheControl.maxAge(14, TimeUnit.DAYS))
+                .header(HttpHeaders.CONTENT_DISPOSITION, contentDisposition.toString());
+
+        if (!Helper.isNullOrEmpty(mimeType)) {
+            builder.contentType(MediaType.parseMediaType(mimeType));
+        } else {
+            if (entryAttachment != null && Helper.isNullOrEmpty(entryAttachment.getFileType())) {
+                builder.contentType(MediaType.parseMediaType(entryAttachment.getFileType()));
+            }
+        }
+
+        return builder.body(outputStream -> Files.copy(file.toPath(), outputStream));
 
     }
 
-//    @RequestMapping(value = "file/inline/{path}")
-//    public ResponseEntity<byte[]> getFileInline(@PathVariable("path") String path, HttpServletResponse response,Principal principal) throws IOException {
-//
-//        String destStr = Constant.UPLOAD_ROOT_DIR + "/attachment/";
-//
-//        if (!Helper.isNullOrEmpty(path)) {
-//            EntryAttachment entryAttachment = entryAttachmentRepository.findByFileUrl(path);
-//            if (entryAttachment != null && entryAttachment.getBucketId() != null) {
-//                destStr += "bucket-" + entryAttachment.getBucketId() + "/";
-//            }
-//
-//            if (entryAttachment != null && entryAttachment.getItemId() != null) {
-//                Item item = itemRepository.getReferenceById(entryAttachment.getItemId());
-//                if (item != null && item.getX() != null && item.getX().get("secure") != null && item.getX().get("secure").asBoolean() && principal==null) {
-//                    // is private
-//                    // ERROR 401
-//                    throw new OAuth2AuthenticationException(new OAuth2Error("401"),"Full authentication is required to access this resource");
-//                }
-//            }
-//
-//
-//            ContentDisposition contentDisposition = ContentDisposition.builder("inline")
-//                    .build();
-//
-//            File file = new File(destStr + path);
-//
-//            if (file.isFile()) {
-//
-//                String mimeType = Files.probeContentType(file.toPath());
-//
-//                ResponseEntity.BodyBuilder builder = ResponseEntity.ok()
-//                        .header(HttpHeaders.CONTENT_DISPOSITION, contentDisposition.toString());
-//
-//                if (!Helper.isNullOrEmpty(mimeType)) {
-//                    builder.contentType(MediaType.parseMediaType(mimeType));
-//                } else {
-//                    if (entryAttachment != null && Helper.isNullOrEmpty(entryAttachment.getFileType())) {
-//                        builder.contentType(MediaType.parseMediaType(entryAttachment.getFileType()));
-//                    }
-//                }
-//
-//                return builder
-//                        .body(Files.readAllBytes(file.toPath()));
-//            } else {
-//                return new ResponseEntity<byte[]>(HttpStatus.NOT_FOUND);
-//            }
-//        } else {
-//            return new ResponseEntity<byte[]>(HttpStatus.NOT_FOUND);
-//        }
-//    }
-
     @RequestMapping(value = "file/inline/{path}")
-    public ResponseEntity<StreamingResponseBody> getFileInline(@PathVariable("path") String path, HttpServletResponse response, Principal principal) throws IOException {
+    @Transactional(readOnly = true)
+    public ResponseEntity<StreamingResponseBody> getFileInline(@PathVariable("path") String path,
+                                                               HttpServletResponse response, Principal principal) throws IOException {
 
         String destStr = Constant.UPLOAD_ROOT_DIR + "/attachment/";
 
         if (!Helper.isNullOrEmpty(path)) {
-            EntryAttachment entryAttachment = entryAttachmentRepository.findByFileUrl(path);
+            EntryAttachment entryAttachment = entryAttachmentRepository.findFirstByFileUrl(path);
             if (entryAttachment != null && entryAttachment.getBucketId() != null) {
                 destStr += "bucket-" + entryAttachment.getBucketId() + "/";
             }
 
             if (entryAttachment != null && entryAttachment.getItemId() != null) {
-                Item item = itemRepository.getReferenceById(entryAttachment.getItemId());
-                if (item != null && item.getX() != null && item.getX().get("secure") != null && item.getX().get("secure").asBoolean() && principal==null) {
+                Item item = itemRepository.findById(entryAttachment.getItemId()).orElse(null);
+                if (item != null && item.getX() != null && item.getX().get("secure") != null && item.getX().get("secure").asBoolean() && principal == null) {
                     // is private
                     // ERROR 401
-                    throw new OAuth2AuthenticationException(new OAuth2Error("401"),"Full authentication is required to access this resource");
+                    throw new OAuth2AuthenticationException(new OAuth2Error("401"), "Full authentication is required to access this resource");
                 }
             }
-
 
             ContentDisposition contentDisposition = ContentDisposition.builder("inline")
                     .build();
@@ -1026,6 +954,7 @@ public class EntryController {
                 String mimeType = Files.probeContentType(file.toPath());
 
                 ResponseEntity.BodyBuilder builder = ResponseEntity.ok()
+                        .cacheControl(CacheControl.maxAge(14, TimeUnit.DAYS))
                         .header(HttpHeaders.CONTENT_DISPOSITION, contentDisposition.toString());
 
                 if (!Helper.isNullOrEmpty(mimeType)) {
@@ -1037,7 +966,7 @@ public class EntryController {
                 }
 
                 return builder
-                        .body(outputStream-> Files.copy(file.toPath(), outputStream));
+                        .body(outputStream -> Files.copy(file.toPath(), outputStream));
             } else {
                 return new ResponseEntity(HttpStatus.NOT_FOUND);
             }
@@ -1047,6 +976,7 @@ public class EntryController {
     }
 
     @RequestMapping(value = "file/unzip/{path}")
+    @Transactional(readOnly = true)
     public ResponseEntity<byte[]> getFileUnzip(@PathVariable("path") String path, HttpServletResponse response, Principal principal) throws IOException {
 
         String destStr = Constant.UPLOAD_ROOT_DIR + "/attachment/";
@@ -1056,17 +986,17 @@ public class EntryController {
         EntryAttachment entryAttachment = null;
 
         if (!Helper.isNullOrEmpty(path)) {
-            entryAttachment = entryAttachmentRepository.findByFileUrl(path);
+            entryAttachment = entryAttachmentRepository.findFirstByFileUrl(path);
             if (entryAttachment != null && entryAttachment.getBucketId() != null) {
                 destStr += "bucket-" + entryAttachment.getBucketId() + "/";
             }
 
             if (entryAttachment != null && entryAttachment.getItemId() != null) {
-                Item item = itemRepository.getReferenceById(entryAttachment.getItemId());
-                if (item != null && item.getX() != null && item.getX().get("secure") != null && item.getX().get("secure").asBoolean() && principal==null) {
+                Item item = itemRepository.findById(entryAttachment.getItemId()).orElse(null);
+                if (item != null && item.getX() != null && item.getX().get("secure") != null && item.getX().get("secure").asBoolean() && principal == null) {
                     // is private
                     // ERROR 401
-                    throw new OAuth2AuthenticationException(new OAuth2Error("401"),"Full authentication is required to access this resource");
+                    throw new OAuth2AuthenticationException(new OAuth2Error("401"), "Full authentication is required to access this resource");
                 }
             }
 
@@ -1087,15 +1017,6 @@ public class EntryController {
 
                 byte[] returnFile;
                 if (path.endsWith(".zip")) {
-//                String tempFile = Constant.UPLOAD_ROOT_DIR + "/temp-unzip/"+ Instant.now().toEpochMilli();
-//                File destDir = new File(tempFile);
-//                destDir.mkdirs();
-//
-//                new ZipFile(file)
-//                        .extractAll(tempFile);
-//                File f = new File(tempFile);
-//                File df = f.listFiles()[0];
-
                     ZipFile zf = new ZipFile(file);
                     List<FileHeader> fileHeaderList = zf.getFileHeaders();
                     if (fileHeaderList.size() > 0) {
@@ -1113,22 +1034,6 @@ public class EntryController {
                     } else {
                         returnFile = new byte[0];
                     }
-//                for (int i = 0; i < fileHeaderList.size(); i++) {
-//                    FileHeader fileHeader = fileHeaderList.get(i);
-//                    ZipInputStream is = zf.getInputStream(fileHeader);
-//                    int uncompressedSize = (int) fileHeader.getUncompressedSize();
-//                    OutputStream os = new ByteArrayOutputStream(uncompressedSize);
-//                    int bytesRead;
-//                    byte[] buffer = new byte[4096];
-//                    while ((bytesRead = is.read(buffer)) != -1) {
-//                        os.write(buffer, 0, bytesRead);
-//                    }
-//                    byte[] uncompressedBytes = ((ByteArrayOutputStream) os).toByteArray();
-//                    inMemoryFiles.put(fileHeader.getFileName(), new ByteArrayInputStream(uncompressedBytes));
-//                    is.close();
-//                }
-
-//                returnFile = Files.readAllBytes(df.toPath());
                 } else {
                     returnFile = Files.readAllBytes(file.toPath());
                 }
@@ -1140,6 +1045,7 @@ public class EntryController {
                         .build();
 
                 ResponseEntity.BodyBuilder builder = ResponseEntity.ok()
+                        .cacheControl(CacheControl.maxAge(14, TimeUnit.DAYS))
                         .header(HttpHeaders.CONTENT_DISPOSITION, contentDisposition.toString());
 
                 if (!Helper.isNullOrEmpty(mimeType)) {
@@ -1159,70 +1065,13 @@ public class EntryController {
         }
     }
 
-
-//    public byte[] unzip(String fileZip) throws IOException {
-////        String fileZip = "src/main/resources/unzipTest/compressed.zip";
-//        String tempFile = Constant.UPLOAD_ROOT_DIR + "/temp-unzip/"+ Instant.now().toEpochMilli();
-//        File destDir = new File(tempFile);
-//        destDir.mkdirs();
-//
-//        byte[] buffer = new byte[1024];
-//        ZipInputStream zis = new ZipInputStream(new FileInputStream(fileZip));
-//        ZipEntry zipEntry = zis.getNextEntry();
-//        while (zipEntry != null) {
-//            File newFile = newFile(destDir, zipEntry);
-//            if (zipEntry.isDirectory()) {
-//                if (!newFile.isDirectory() && !newFile.mkdirs()) {
-//                    throw new IOException("Failed to create directory " + newFile);
-//                }
-//            } else {
-//                // fix for Windows-created archives
-//                File parent = newFile.getParentFile();
-//                if (!parent.isDirectory() && !parent.mkdirs()) {
-//                    throw new IOException("Failed to create directory " + parent);
-//                }
-//
-//                // write file content
-//                FileOutputStream fos = new FileOutputStream(newFile);
-//                int len;
-//                while ((len = zis.read(buffer)) > 0) {
-//                    fos.write(buffer, 0, len);
-//                }
-//                fos.close();
-//            }
-//            zipEntry = zis.getNextEntry();
-//        }
-//        zis.closeEntry();
-//        zis.close();
-//        return buffer;
-//    }
-//
-//    public static File newFile(File destinationDir, ZipEntry zipEntry) throws IOException {
-//        File destFile = new File(destinationDir, zipEntry.getName());
-//
-//        String destDirPath = destinationDir.getCanonicalPath();
-//        String destFilePath = destFile.getCanonicalPath();
-//
-//        if (!destFilePath.startsWith(destDirPath + File.separator)) {
-//            throw new IOException("Entry is outside of the target dir: " + zipEntry.getName());
-//        }
-//
-//        return destFile;
-//    }
-
     public static String shortUUID() {
         UUID uuid = UUID.randomUUID();
         return Long.toString(uuid.getLeastSignificantBits(), Character.MAX_RADIX);
     }
 
-//    @GetMapping(value = "dashboard2/{dashboardId}")
-//    public Map getDashboardData(@PathVariable Long dashboardId) {
-//        return entryService.getDashboardData(dashboardId);
-//    }
-
-
     @GetMapping(value = "dashboard/{dashboardId}")
-    public Map getDashboardData2(@PathVariable Long dashboardId,
+    public Map getDashboardData2(@PathVariable("dashboardId") Long dashboardId,
                                  @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
                                  @RequestParam(value = "email", required = false) String email,
                                  HttpServletRequest request) {
@@ -1232,14 +1081,15 @@ public class EntryController {
         Map p = new HashMap();
         try {
             p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
+        } catch (Exception e) {
+            System.out.println("Filters:" + filters);
+            System.out.println("Error decoding filter (dashboardId:" + dashboardId + "):" + e.getMessage());
         }
         return entryService.getDashboardDataNativeNew(dashboardId, p, email, request);
     }
 
     @GetMapping(value = "dashboard-map/{dashboardId}")
-    public Map getDashboardDataMap2(@PathVariable Long dashboardId,
+    public Map getDashboardDataMap2(@PathVariable("dashboardId") Long dashboardId,
                                     @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
                                     @RequestParam(value = "email", required = false) String email,
                                     HttpServletRequest request) {
@@ -1249,14 +1099,15 @@ public class EntryController {
         Map p = new HashMap();
         try {
             p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
+        } catch (Exception e) {
+            System.out.println("Filters:" + filters);
+            System.out.println("Error decoding filter (dashboardId:" + dashboardId + "):" + e.getMessage());
         }
         return entryService.getDashboardMapDataNativeNew(dashboardId, p, email, request);
     }
 
     @GetMapping(value = "chart/{chartId}")
-    public Map getChartData(@PathVariable Long chartId,
+    public Map getChartData(@PathVariable("chartId") Long chartId,
                             @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
                             @RequestParam(value = "email", required = false) String email,
                             HttpServletRequest request) {
@@ -1266,45 +1117,28 @@ public class EntryController {
         Map p = new HashMap();
         try {
             p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
+        } catch (Exception e) {
+            System.out.println("Filters:" + filters);
+            System.out.println("Error decoding filter (chartId:" + chartId + "):" + e.getMessage());
         }
         return entryService.getChartDataNative(chartId, p, email, request);
     }
 
     @GetMapping(value = "chart-map/{chartId}")
-    public Object getChartMapData(@PathVariable Long chartId,
-                               @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
-                               @RequestParam(value = "email", required = false) String email,
-                               HttpServletRequest request) {
-
-
+    public Object getChartMapData(@PathVariable("chartId") Long chartId,
+                                  @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
+                                  @RequestParam(value = "email", required = false) String email,
+                                  HttpServletRequest request) {
         ObjectMapper mapper = new ObjectMapper();
         Map p = new HashMap();
         try {
             p = mapper.readValue(URLDecoder.decode(filters, StandardCharsets.UTF_8), Map.class);
-        } catch (IOException e) {
-            e.printStackTrace();
+        } catch (Exception e) {
+            System.out.println("Filters:" + filters);
+            System.out.println("Error decoding filter (chartId:" + chartId + "):" + e.getMessage());
         }
         return entryService.getChartMapDataNative(chartId, p, email, request);
     }
-
-
-//    @GetMapping(value = "chart2/{chartId}")
-//    public Map getChartData02(@PathVariable Long chartId,
-//                              @RequestParam(value = "filters", required = false, defaultValue = "{}") String filters,
-//                              HttpServletRequest req) {
-//
-//
-//        ObjectMapper mapper = new ObjectMapper();
-//        Map p = new HashMap();
-//        try {
-//            p = mapper.readValue(URLDecoder.decode(filters, "UTF-8"), Map.class);
-//        } catch (IOException e) {
-//            e.printStackTrace();
-//        }
-//        return entryService.getChartDataNative2(chartId, p, req);
-//    }
 
     public static final String CONTENT_TYPE = "Content-Type";
     public static final String CONTENT_LENGTH = "Content-Length";
@@ -1323,7 +1157,7 @@ public class EntryController {
         String destStr = Constant.UPLOAD_ROOT_DIR + "/attachment/";
 
         if (!Helper.isNullOrEmpty(fileName)) {
-            EntryAttachment entryAttachment = entryAttachmentRepository.findByFileUrl(fileName);
+            EntryAttachment entryAttachment = entryAttachmentRepository.findFirstByFileUrl(fileName);
             if (entryAttachment != null && entryAttachment.getBucketId() != null) {
                 destStr += "bucket-" + entryAttachment.getBucketId() + "/";
             }
@@ -1360,25 +1194,8 @@ public class EntryController {
                 .header(CONTENT_LENGTH, contentLength)
                 .header(CONTENT_RANGE, BYTES + " " + rangeStart + "-" + rangeEnd + "/" + fileSize)
                 .body(data);
-
-
     }
 
-
-//    public byte[] readByteRange(String filename, long start, long end) throws IOException {
-//
-//        FileInputStream inputStream = new FileInputStream(filename);
-//        ByteArrayOutputStream bufferedOutputStream = new ByteArrayOutputStream();
-//        byte[] data = new byte[1024];
-//        int nRead;
-//        while ((nRead = inputStream.read(data, 0, data.length)) != -1) {
-//            bufferedOutputStream.write(data, 0, nRead);
-//        }
-//        bufferedOutputStream.flush();
-//        byte[] result = new byte[(int) (end - start)];
-//        System.arraycopy(bufferedOutputStream.toByteArray(), (int) start, result, 0, (int) (end - start));
-//        return result;
-//    }
 
     public byte[] readByteRange(String filename, long start, long end) throws IOException {
         Path path = Paths.get(filename);
@@ -1423,4 +1240,11 @@ public class EntryController {
         }
         return 0L;
     }
+
+    @GetMapping("resync")
+    public void updateDatasetData(@RequestParam("datasetId") Long datasetId) {
+        this.entryService.bulkResyncEntryData_ModelPicker(datasetId);
+    }
+
+
 }
